--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
-    <title>React App</title>
+    <meta name="description" content="Soccer, Ekstraklasa 20/21" />
+    <meta name="keywords" content="React (create-react-app), Semantic UI" />
+    <meta name="author" content="MD-J" />
+    <title>Soccer, Ekstraklasa 20/21</title>
   </head>
   <body>
     <div id="root"></div>
