feat: connect to sportradar api, update readme, final corrections

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Soccer, Ekstraklasa 20/21" />
+    <meta name="description" content="Soccer, Ekstraklasa last three seasons" />
     <meta name="keywords" content="React (create-react-app), Semantic UI" />
     <meta name="author" content="MD-J" />
-    <title>Soccer, Ekstraklasa 20/21</title>
+    <title>Soccer, Ekstraklasa</title>
   </head>
   <body>
     <div id="root"></div>
